<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="current_version">1.0.0</string>
    <string name="app_name">Anonymous</string>

    <string name="login">Login as</string>
    <string name="user">User %1$s</string>

    <!-- Dialogs strings. -->
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_retry">Retry</string>


    <!-- Errors strings. -->
    <string name="error_credentials_empty">The App class should contain ConnectyCube credentials. Register new account and application at https://admin.connectycube.com
        then put Application credentials from Overview page + Account key from https://admin.connectycube.com/account/settings</string>
    <string name="error_users_empty">The user_config.json file should contain at least 2 and max 4 users with format [\"login\":\"password\"]. Please go to https://admin.connectycube.com and create users in \'Users\' module.</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>

    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>

    <string name="login_chat_login_error">Login Chat error. Please relogin. Error: %s</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>

    <string name="permission_unavailable">%s is not available now!</string>

    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>

    <string name="denied_permission_message">You cannot continue without an access to %s</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>

    <!--menu-->
    <string name="action_start_login">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>


    <!--action bar-->
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>


    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>


    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>

    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>

    <string name="text_welcoming_message">Please enter username and chat room name. \nYou can join existed chat room.</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_chat_room_name">Chat room name</string>

    <string name="text_select_user_to_call">Select users you want to call</string>

    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>

    <!-- Settings strings. -->
    <string name="title_video_category">Video</string>

    <integer name="pref_default_int_value">0</integer>

    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <integer name="pref_startbitratevalue_min_value">0</integer>
    <integer name="pref_startbitratevalue_max_value">2000</integer>
    <integer name="pref_startbitratevalue_step_size">100</integer>

    <!--Call Settings-->

    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <integer name="pref_answer_time_interval_min_value">15</integer>
    <integer name="pref_answer_time_interval_max_value">90</integer>
    <integer name="pref_answer_time_interval_step_size">5</integer>

    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <integer name="pref_disconnect_time_interval_min_value">10</integer>
    <integer name="pref_disconnect_time_interval_max_value">90</integer>
    <integer name="pref_disconnect_time_interval_step_size">5</integer>

    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_title">Dialing Time Interval (3&#8211;10s)</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <integer name="pref_dialing_time_interval_min_value">3</integer>
    <integer name="pref_dialing_time_interval_max_value">10</integer>
    <integer name="pref_dialing_time_interval_step_size">1</integer>

    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_default">0</string>

    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="pref_version">ConnectyCube videochat\nBuild version 1.12</string>
    <string name="accepted">Accepted</string>
    <string name="connection_was_lost">Connection was lost</string>

    <string name="opponents">and %s other</string>
    <string name="opponent">and %s </string>
    <string name="ringing">Ringing</string>
    <string name="stop_share">Stop</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>

</resources>
